[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "napari-dna-damage"
version = "0.0.1"
authors = [
    { name = "JvB22" }
]
description = "Napari plugin for DNA-damage analysis on neuron microscopy images"
readme = "README.md"
requires-python = ">=3.9, <3.13"    # Supported versions for TensorFlow
license = { text = "GPL-3.0-or-later" }
keywords = ["Napari"]
classifiers = [
    "Framework :: napari",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [

]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[project.entry-points."napari.manifest"]
napari-dna-damage = "napari_dna_damage:napari.yaml"

[project.urls]
Homepage = "https://github.com/JvB22/napari-dna-damage"
Repository = "https://github.com/JvB22/napari-dna-damage.git"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP"
]

[tool.ruff.format]
quote-style = "double"